--- a/config/rubber/rubber.yml
+++ b/config/rubber/rubber.yml
@@ -18,7 +18,7 @@ timezone: US/Eastern
 
 # REQUIRED: the domain all the instances should be associated with
 #
-domain: kaplosapp.com
+domain: ''
 
 # OPTIONAL: See rubber-dns.yml for dns configuration
 # This lets rubber update a dynamic dns service with the instance alias
@@ -58,9 +58,9 @@ cloud_providers:
 
     # REQUIRED The amazon keys and account ID (digits only, no dashes) used to access the AWS API
     #
-    access_key: AKIAJOVQUBYGFW6MVTDA
-    secret_access_key: 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
-    account: kaps
+    access_key: ''
+    secret_access_key: ''
+    account: ''
 
     # REQUIRED:  The name of the amazon keypair and location of its private key
     #
@@ -117,8 +117,8 @@ cloud_providers:
     # Ubuntu 14.04.1 Trusty instance-store 64-bit: ami-92f569fa
     #
     # m1.small or m1.large or m1.xlarge
-    image_type: t2.micro
-    image_id: i-05adfc16e5a9a852e
+    image_type: ''
+    image_id: ''
 
     # OPTIONAL: Provide fog-specific options directly.  This should only be used if you need a special setting that
     # Rubber does not directly expose.  Since these settings will be passed directly through to fog, we can't make any
